<resources>
    <string name="app_name">SocialCook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CHANNEL_ID_2">channel2</string>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    <string name="add">add</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="enter_country_here">Enter country here</string>
    <string name="sign_up">Sign up</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="type_name_here">Type name here..</string>
    <string name="recipe_typee">Recipe type</string>
    <string name="type_method">Type method here...</string>
    <string name="recipe_methodd">Recipe method</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="type_amount_here">Type amount here...</string>
    <string name="type_ml_here">Type ml here...</string>
    <string name="type_item_here">Type item here</string>
    <string name="insert_recipe_type">insert recipe type..</string>
    <string name="todo">TODO</string>
    <string name="admin_page">Add recipe</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="register_page">Register</string>
    <string name="title_activity_recieve_notification">RecieveNotificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recipe_method">Recipe method</string>
    <string name="recipe_ingridients">Recipe ingridients</string>
    <string name="recipe_type">Recipe type</string>
    <string name="recipe_request">Recipe request:</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Address">Address</string>
    <string name="type_date_here">Type date here</string>
    <string name="type_time_here">Type time here</string>
    <string name="type_address_here">Type address here</string>

</resources>