<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".EventPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/Date"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_date_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/Time"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_time_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/Address"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_address_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="Create Evemt"
            android:textColor="#ffaa00"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>