<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_imgg"
    android:orientation="vertical"
    tools:context=".afterlogin.adminFrag.AdminPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/recipe_name"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/recipeNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_name_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/recipe_type"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/recipeTypeInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/insert_recipe_type"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="Image URL"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/urlInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="recipe URL image here.."
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recipeDescription"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/chango"
            android:gravity="center|start"
            android:text="@string/recipe_method"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/descriptionID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_method"
            android:inputType="textMultiLine|textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/keyAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_item_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/valueAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_amount_here"
            android:inputType="number"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAddAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="@string/add"
            android:textColor="#ffaa00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/keyMl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_item_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/valueMl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_ml_here"
            android:inputType="numberDecimal"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAddMl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="Add"
            android:textColor="#ffaa00"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/keyMg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="@string/type_item_here"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/valueMg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/chango"
            android:hint="Type grams here..."
            android:inputType="numberDecimal"
            android:textColor="@color/common_google_signin_btn_text_light_focused"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonAddMg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="@string/add"
            android:textColor="#ffaa00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_design"
            android:text="Send"
            android:textColor="#ffaa00"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listviewmain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_disabled" />
    </LinearLayout>

</LinearLayout>
